--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "object-hash": "^1.2.0",
     "walmart": "0.0.4"
   }
